plugins/kotlin/j2k/shared/tests/testData/newJ2k/invalidCode/newExpressionWithoutName.k1.kt
// ERROR: Unresolved reference: NO_NAME_PROVIDED
internal object Test {
    @JvmStatic
    fun main(args: Array<String>) {
        val x: Any = NO_NAME_PROVIDED()
    }
}
